fix alignment of collapse table

--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -161,7 +161,7 @@ th {
 }
 .table-responsive {
   overflow-x: hidden;
-  max-height: 48rem;
+  max-height: 32rem;
 }
 
 .gps_overlay {
@@ -187,7 +187,7 @@ th {
   .table-responsive {
     overflow-x: scroll;
     max-width: 560px ; 
-    max-height: 48rem;
+    max-height: 32rem;
   }
 }
 .mapContainer {
@@ -231,7 +231,7 @@ th {
   .table-responsive {
     overflow-x: scroll;
     max-width: 420px ; 
-    max-height: 48rem;
+    max-height: 32rem;
   }
   .gps_page {
     padding-top: 107px;
@@ -261,7 +261,7 @@ th {
   .table-responsive {
     overflow-x: scroll;
     max-width: 380px ; 
-    max-height: 48rem;
+    max-height: 32rem;
   }
   .gps_overlay {
     width: 40%;
