--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -49,7 +49,7 @@ font-size: 14px;
 }
 .gps_table_container {
 height: 100vh;
-overflow-y: auto;
+// overflow-y: auto;
 }
 
 
